; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/image-source/extr_obs-slideshow.c_ss_destroy.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/image-source/extr_obs-slideshow.c_ss_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.slideshow = type { i32, %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @ss_destroy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ss_destroy(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.slideshow*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.slideshow*
  store %struct.slideshow* %5, %struct.slideshow** %3, align 8
  %6 = load %struct.slideshow*, %struct.slideshow** %3, align 8
  %7 = getelementptr inbounds %struct.slideshow, %struct.slideshow* %6, i32 0, i32 2
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @obs_source_release(i32 %8)
  %10 = load %struct.slideshow*, %struct.slideshow** %3, align 8
  %11 = getelementptr inbounds %struct.slideshow, %struct.slideshow* %10, i32 0, i32 1
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = call i32 @free_files(i32* %12)
  %14 = load %struct.slideshow*, %struct.slideshow** %3, align 8
  %15 = getelementptr inbounds %struct.slideshow, %struct.slideshow* %14, i32 0, i32 0
  %16 = call i32 @pthread_mutex_destroy(i32* %15)
  %17 = load %struct.slideshow*, %struct.slideshow** %3, align 8
  %18 = call i32 @bfree(%struct.slideshow* %17)
  ret void
}

declare dso_local i32 @obs_source_release(i32) #1

declare dso_local i32 @free_files(i32*) #1

declare dso_local i32 @pthread_mutex_destroy(i32*) #1

declare dso_local i32 @bfree(%struct.slideshow*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
